test/compile-fail/find-file/no-module-multiple/expected.txt
error: couldn't read ./test/compile-fail/find-file/no-module-multiple/a.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-module-multiple/top.rhdl:1:1
  │
1 │ mod a;
  │ ^^^^^^ declared here

error: couldn't read ./test/compile-fail/find-file/no-module-multiple/a/b.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-module-multiple/top.rhdl:2:1
  │
2 │ mod b;
  │ ^^^^^^ declared here

error: couldn't read ./test/compile-fail/find-file/no-module-multiple/a/b/c.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-module-multiple/top.rhdl:3:1
  │
3 │ mod c;
  │ ^^^^^^ declared here

error: couldn't read ./test/compile-fail/find-file/no-module-multiple/a/b/c/e.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-module-multiple/top.rhdl:5:1
  │
5 │ mod e;
  │ ^^^^^^ declared here

